# piper-chat-tui

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/piper-cli/: Cargo.toml
crates/piper-cli/src/: main.rs
crates/piper-core/: Cargo.toml
crates/piper-core/src/: lib.rs  protocol.rs  session.rs  transfer.rs  util.rs
crates/piper-tauri/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/piper-tauri/src/: App.tsx  types.ts
crates/piper-tauri/src-tauri/: Cargo.toml  tauri.conf.json
crates/piper-tauri/src-tauri/capabilities/: default.json
crates/piper-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/piper-tauri/src/api/: commands.ts  events.ts
crates/piper-tauri/src/components/: ChatInput.tsx  ChatView.tsx  ErrorToast.tsx  FilesPane.tsx  MessagePane.tsx  PeersPane.tsx  WelcomeScreen.tsx
crates/piper-tauri/src/hooks/: useSession.ts
crates/piper-tauri/src/styles/: global.css  theme.ts
crates/piper-tauri/src/utils/: clipboard.ts
crates/piper-tui/: Cargo.toml
crates/piper-tui/src/: app.rs  main.rs  net.rs  transfer.rs  ui.rs  welcome.rs
src/: chat.rs  filepicker.rs  main.rs  net.rs  theme.rs  transfer.rs  welcome.rs
