[workspace]
members = ["crates/piper-core", "crates/piper-tui", "crates/piper-cli", "crates/piper-tauri/src-tauri"]
default-members = ["crates/piper-core", "crates/piper-tui", "crates/piper-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
piper-core = { path = "crates/piper-core" }

anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "6"
iroh = { version = "0.96", default-features = false }
iroh-blobs = { version = "0.98", default-features = false, features = ["fs-store"] }
iroh-gossip = { version = "0.96", default-features = false, features = ["net"] }
iroh-tickets = "0.3"
n0-future = "0.3"
open = "5"
postcard = { version = "1", features = ["alloc"] }
rand = "0.9"
ratatui = "0.29"
ratatui-explorer = "0.2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "fs"] }
