[package]
name = "piper-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "piper-cli"
path = "src/main.rs"

[dependencies]
piper-core.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
iroh-tickets.workspace = true
tokio.workspace = true
