[package]
name = "piper-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
iroh.workspace = true
iroh-blobs.workspace = true
iroh-gossip.workspace = true
iroh-tickets.workspace = true
n0-future.workspace = true
postcard.workspace = true
rand.workspace = true
serde.workspace = true
tokio.workspace = true
dirs.workspace = true
