[package]
name = "piper-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "piper_tauri_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
piper-core.workspace = true
anyhow.workspace = true
iroh-blobs.workspace = true
iroh-tickets.workspace = true
serde.workspace = true
serde_json = "1"
tokio.workspace = true
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
